[0.1.2] Update tests + some docs + run tests in precommit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,3 +3,11 @@ repos:
     rev: 23.7.0
     hooks:
     -   id: black
+
+-   repo: local
+    hooks:
+    -   id: tests
+        name: Run tests
+        entry: python -m tests
+        language: python
+        types: [python]
